# AAASE-Capstone

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py
app/agents/: __init__.py  campaign_strategy_agent.py  content_generation_agent.py  market_intelligence_agent.py  quality_assurance_agent.py
app/api/: __init__.py  dependencies.py  main.py
app/config/: __init__.py  settings.py
app/graph/: __init__.py  coordinator.py  nodes.py
app/guardrails/: __init__.py  exceptions.py  manager.py  output_validation.py  prompt_injection.py  request_validation.py  retry.py
app/llm/: __init__.py  exceptions.py  factory.py  fallback_content.py  structured_output.py
app/observability/: __init__.py  context.py  event_logger.py  execution_tracer.py  logging_config.py  metrics_collector.py  state_tracer.py  trace_id.py
app/prompts/: __init__.py  campaign_strategy.py  content_generation.py  market_intelligence.py  quality_assurance.py
app/schemas/: __init__.py  campaign_request.py  campaign_result.py  campaign_strategy.py  content_package.py  enums.py  graph_state.py  market_intelligence.py  quality_review.py
app/search/: __init__.py  exceptions.py  schemas.py  service.py
app/services/: __init__.py  campaign_strategy_service.py  content_generation_service.py  export_service.py  market_intelligence_service.py  (+1 more)
frontend/: .env.example  README.md  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
mermaid-files/: architecture.md
tests/: conftest.py
(+63 files in other folders)
