[project]
name = "ai-marketing-team"
version = "0.1.0"
description = "LangGraph multi-agent system that generates a complete marketing campaign from a product brief."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
